@@ -1,3 +1,5 @@
+* BUG#8824 Correctif des paramètres de modèle de courrier lors de la génération par batch
+
 Version 2.0 - 2018-04-13
 * OTH#0000 Encodage des documents seulement dans la réponse à l'appel RPC, itération sur #8401
 * FEA#8401 La production de documents peut se faire par appel RPC
