@@ -1,3 +1,5 @@
+* BUG#8824 Fix template parameters for batch generated reports
+
 Version 2.0 - 2018-04-13
 * OTH#0000 Only encode documents in reponse to RPC call response, iteration on #8401
 * FEA#8401 Report production can be made via RPC call
